--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "pug": "^2.0.0-rc.4",
     "sequelize": "^3.23.6",
     "sequelize-cli": "^3.1.0",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "cross-env": "^3.1.3",
